objects/bar__Backup_Object__c.object
<CustomObject>
    <fields>
        <fullName>bar__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>bar__Backup_Policy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Backup Policy</label>
        <referenceTo>bar__Backup_Policy__c</referenceTo>
        <relationshipLabel>Backup Objects</relationshipLabel>
        <relationshipName>Backup_Objects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>bar__Unsupported__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Unsupported</label>
        <type>Checkbox</type>
    </fields>
    <label>Backup Object</label>
    <nameField>
        <label>Backup Object Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Backup Objects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>